aapb/cache.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: aapb-cache
spec:
  plugin:
    simple-cache:
      path: /tmp
