aapb/deploy.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: aapb
  name: aapb

spec:
  selector:
    matchLabels:
      app: aapb

  template:
    metadata:
      labels:
        app: aapb

    spec:
      containers:
        - name: aapb
          image: 'ghcr.io/wgbh-mla/aapb2:pr-2749'
          command: ['rails']
          args: ['s', '-b', '0.0.0.0']
          imagePullPolicy: Always
          volumeMounts:
            - name: jetty
              mountPath: /usr/src/app/jetty
            - name: logs
              mountPath: /log
            - name: ci-secret
              mountPath: /usr/src/app/config/ci.yml
              subPath: ci.yml
              readOnly: true
          resources:
            limits:
              cpu: '2'
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 100Mi
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: logs-pvc
        - name: ci-secret
          secret:
            secretName: ci-secret
            items:
              - key: ci.yml
                path: ci.yml
        - name: jetty
          persistentVolumeClaim:
            claimName: jetty-pvc
