aapb/service.yml
apiVersion: v1
kind: Service
metadata:
  name: aapb
spec:
  selector:
    app: aapb
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 3000
