aapb/solr.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: solr
  name: solr

spec:
  selector:
    matchLabels:
      app: solr

  template:
    metadata:
      labels:
        app: solr

    spec:
      containers:
        - name: solr
          image: 'ghcr.io/wgbh-mla/aapb2:pr-2749'
          command: ['bash']
          args: ['-c', 'cd jetty && java -jar start.jar']
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /usr/src/app/jetty
              name: jetty
          resources:
            limits:
              cpu: '2'
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 100Mi
      volumes:
        - name: jetty
          persistentVolumeClaim:
            claimName: jetty-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: solr
spec:
  selector:
    app: solr
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 8983
