aapb/ingress-demo.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: aapb-ingress

spec:
  routes:
    - kind: Rule
      match: Host(`demo.aapb.wgbh-mla.org`)
      services:
        - kind: Service
          name: aapb
          port: 443
      middlewares:
        - name: public-ratelimit
  tls:
    secretName: aapb-tls-demo
