aapb/ingress-production.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: aapb-ingress

spec:
  routes:
    - kind: Rule
      match: Host(`americanarchive.org`)
      services:
        - kind: Service
          name: aapb
          port: 443
      middlewares:
        - name: public-ratelimit
        - name: aapb-cache
  tls:
    secretName: aapb-tls
