aapb/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: aapb-ingress

spec:
  routes:
    - kind: Rule
      match: Host(`aa.wgbh-mla.org`)
      services:
        - kind: Service
          name: aapb
          port: 80
      middlewares:
        - name: public-ratelimit
